chore(ep3): sprint 5 base limpia - HATEOAS removido en 7 MS
- 7 MS compilan BUILD SUCCESS sin HATEOAS (ms-catalogo, ms-reportes,
  ms-logistica-envios, ms-administracion-soporte, ms-usuarios-identidad,
  ms-inventario-abastecimiento, ms-pedidos-ventas)
- 23 controllers reescritos: ResponseEntity<EntityModel<DTO>> -> ResponseEntity<DTO>,
  CollectionModel.of(...) -> List<DTO> directo
- 7 pom.xml: dependencia spring-boot-starter-hateoas removida
- BOM UTF-8 removido de ms-pedidos-ventas/pom.xml
- Docs obsoletos eliminados: docs/ep2-tareas-equipo.md, docs/hateoas/

Tag de respaldo pre-hateoas-cleanup (078468b) intacto por si se requiere rollback.
-1400 lineas netas, sin texto bugeado, sin caracteres de control.